--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -480,9 +480,20 @@ TIP: You can use the `list` command to see all your bookmarks in the folder hier
 
 ==== Expanding the folder hierarchy: *`expand`*
 
-Expands the folder hierarchy by the specified number of levels.
+If you want to expand all unexpanded folders, use this command.
 
 Format: `*expand* [LEVEL=1]`
+
+For example:
+
+* You want to expand all unexpanded folders by one level with just one command. Type `*expand*` in the command box and hit kbd:[Enter].
++
+image::ExpandCommandUi1.png[]
+// unexpanded folders
+* You see all folders expanded by one level.
++
+image::ExpandCommandUi2.png[]
+
 
 ****
 * `LEVEL` should be a positive integer.
@@ -490,16 +501,26 @@ Format: `*expand* [LEVEL=1]`
 * If `LEVEL` is not specified, expand by 1 level.
 ****
 
-Examples:
+Other examples:
 
 * `*expand* 3` +
 Expands the folder hierarchy by 3 levels.
 
 ==== Collapsing the folder hierarchy: *`collapse`*
 
-Collapses the folder hierarchy by the specified number of levels.
+If you have too many expanded folders and want to collapse them, use this command.
 
 Format: `*collapse* [LEVEL=1]`
+
+For example:
+
+* You want to collapse the deepest expanded folders by one level with just one command. Type `*collapse*` in the command box and hit kbd:[Enter].
++
+image::CollapseCommandUi1.png[]
+// expanded folders
+* You see the deepest expanded folders collapsed by one level.
++
+image::CollapseCommandUi2.png[]
 
 ****
 * `LEVEL` should be a positive integer.
@@ -507,18 +528,30 @@ Format: `*collapse* [LEVEL=1]`
 * If `LEVEL` is not specified, collapse by 1 level.
 ****
 
-Examples:
+Other xamples:
 
-* `*collapse* 1` +
-Collapses the folder hierarchy by 1 level.
+* `*collapse* 9999` +
+Collapses the folder hierarchy by 9999 levels, most likely collapsing them all the way.
 
 [[folder]]
 //tag::AddFolderCommand[]
-==== Adding a new folder: *`folder`*
+==== Adding a folder: *`folder`*
 
-Creates a new folder for organizing bookmarks into.
+// Context
+When your bookmark list is getting too long, you may want to use this command to create new folders to organize bookmarks into.
 
 Format: `*folder* FOLDER_NAME [p/PARENT_FOLDER=ROOT]`
+
+// How to use the command (what should you see) i.e. before/after
+For example:
+
+* You notice you have 20 bookmarks all related to CS2103T. You decide to create a folder for them, so you enter the command `*folder* CS2103T` and hit kbd:[Enter].
++
+image::AddFolderCommandUi1.png[]
+// dashboard tab, showing many CS2103T related bookmarks not in folder
+* You see a new empty folder `CS2103T` appear in the dashboard.
++
+image::AddFolderCommandUi2.png[]
 
 ****
 * `ROOT` is the topmost folder already created by Mark, and all folders will be descendants of this folder.
@@ -528,7 +561,7 @@ Format: `*folder* FOLDER_NAME [p/PARENT_FOLDER=ROOT]`
 * If `PARENT_FOLDER` is not specified, `PARENT_FOLDER` will default to `ROOT`.
 ****
 
-Examples:
+Other examples:
 
 * `*folder* CS2103 p/NUS` +
 Creates a new folder named `CS2103` under the parent folder `NUS`.
@@ -544,7 +577,7 @@ Format: `*folder-edit* FROM_FOLDER​_NAME t/TO_FOLDER_NAME`
 // How to use the command (what should you see) i.e. before/after
 For example:
 
-* You recently broke up, and want to edit the folder `Dear` containing all your previous memories to `Ex`. So you enter the command `*folder-edit* Dear t/Ex` and hit enter.
+* You recently broke up, and want to edit the folder `Dear` containing all your previous memories to `Ex`. So you enter the command `*folder-edit* Dear t/Ex` and hit kbd:[Enter].
 +
 image::EditFolderCommandUi1.png[]
 // dashboard tab, showing Dear folder with links of photo albums etc.
@@ -569,7 +602,7 @@ Format: `*folder-delete* FOLDER​_NAME`
 // How to use the command (what should you see) i.e. before/after
 For example:
 
-* You see an unused bookmark `CS2101` in the Dashboard, and input `*folder-delete* CS2101` into the command box.
+* You see an unused folder `CS2101` in the Dashboard, and input `*folder-delete* CS2101` into the command box.
 +
 image::DeleteFolderCommandUi1.png[]
 // dashboard tab, showing CS2101 folder with no bookmarks/subfolders
