--- a/docs/UsingAppVeyor.adoc
+++ b/docs/UsingAppVeyor.adoc
@@ -6,12 +6,6 @@ ifdef::env-github[]
 :note-caption: :information_source:
 endif::[]
 
-[NOTE]
-====
-This document was originally written for _AddressBook Level 4_ and hence its screenshots refer to `addressbook-level4`.
-For use with _AddressBook Level 3_, wherever `addressbook-level4` is used in the screenshots, you should use *`addressbook-level3`*.
-====
-
 https://www.appveyor.com/[AppVeyor] is a _Continuous Integration_ platform for GitHub projects. It runs its builds on Windows virtual machines.
 
 AppVeyor can run the project's tests automatically whenever new code is pushed to the repo. This ensures that existing functionality and features have not been broken on Windows by the changes.
@@ -88,7 +82,7 @@ Convert it to the asciidoc format as follows:
 The asciidoc code should look similar to:
 +
 ----
-https://ci.appveyor.com/project/damithc/addressbook-level3[image:https://ci.appveyor.com/api/projects/status/3boko2x2vr5cc3w2?svg=true[Build status]]
+https://ci.appveyor.com/project/bigjunnn/main-egc3b[image:https://ci.appveyor.com/api/projects/status/xvn06l5c3s9dqi57/branch/master?svg=true[Build Status]]
 ----
 +
 Copy and paste the asciidoc code to your `README.adoc` file.
