--- a/docs/ContactUs.adoc
+++ b/docs/ContactUs.adoc
@@ -1,6 +1,7 @@
 = Contact Us
 :site-section: ContactUs
 :stylesDir: stylesheets
+:stylesheet: asciidoctor.css
 
 * *Bug reports, Suggestions:* Post in our https://github.com/se-edu/addressbook-level3/issues[issue tracker] if you noticed bugs or have suggestions on how to improve.
 * *Contributing:* We welcome pull requests. Follow the process described https://github.com/oss-generic/process[here]
