--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1,4 +1,4 @@
-= DukeCooks v1.3 - Developer Guide
+= DukeCooks - Developer Guide
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -6,6 +6,7 @@
 :sectnums:
 :imagesDir: images
 :stylesDir: stylesheets
+:stylesheet: asciidoctor.css
 :xrefstyle: full
 ifdef::env-github[]
 :tip-caption: :bulb:
@@ -14,11 +15,108 @@ ifdef::env-github[]
 endif::[]
 :repoURL: https://github.com/AY1920S1-CS2103T-T10-2/main/tree/master
 
-By: `Team T10-2`      Since: `Oct 2019`      Licence: `MIT`
+By: `Team DukeCooks`      Since: `Oct 2019`      Licence: `MIT`
+
+== Introduction
+
+DukeCooks is a revolutionary lifestyle application, specially designed for health-conscious individuals. DukeCooks
+runs on the Command-Line Interface (CLI), allowing users to execute different commands, all within a single line.
+They will be able to manage various aspects of their lifestyle, from their diet, to exercises and health records.
+
+They can use DukeCooks to manage all their lifestyle needs, all within one single app.
+
+With DukeCooks, being healthy has never been easier!
+
+=== Purpose
+
+This developer guide aims to provide you with both the technical and non-technical aspects of DukeCooks. It also provides
+insight into the future direction of DukeCooks. After reading this document, you should be able to understand the design,
+architecture and goals of DukeCooks.
+
+=== Understanding the document
+
+[TIP] Pro tips which you may find useful.
+
+NOTE: Information that you should take note of.
+
+WARNING: Information that you should be careful with.
+
+[horizontal]
+
+`Model`:: Text with orange highlight (also known as mark-up) indicates a class / package name.
+
+`__Model.java__`:: Italic text with mark-up indicates a file name / github link.
 
 == Setting up
 
-Refer to the guide <<SettingUp#, here>>.
+=== Prerequisites
+
+. *JDK `11`* or above
+. *IntelliJ* IDE
++
+[NOTE]
+IntelliJ by default has Gradle and JavaFx plugins installed. +
+Do not disable them. If you have disabled them, go to `File` > `Settings` > `Plugins` to re-enable them.
+
+=== Setting up the project in your computer
+
+. Fork this repo, and clone the fork to your computer
+. Open IntelliJ (if you are not in the welcome screen, click `File` > `Close Project` to close the existing project dialog first)
+. Set up the correct JDK version for Gradle
+.. Click `Configure` > `Project Defaults` > `Project Structure`
+.. Click `New...` and find the directory of the JDK
+. Click `Import Project`
+. Locate the `build.gradle` file and select it. Click `OK`
+. Click `Open as Project`
+. Click `OK` to accept the default settings.
+
+=== Verifying the setup
+
+. Run the `dukecooks.Main` and try a few commands
+. <<Testing#,Run the tests>> to ensure they all pass.
+
+=== Configurations to do before writing code
+
+==== Configuring the coding style
+
+This project follows https://github.com/oss-generic/process/blob/master/docs/CodingStandards.adoc[oss-generic coding standards]. IntelliJ's default style is mostly compliant with ours but it uses a different import order from ours. To rectify,
+
+. Go to `File` > `Settings...` (Windows/Linux), or `IntelliJ IDEA` > `Preferences...` (macOS)
+. Select `Editor` > `Code Style` > `Java`
+. Click on the `Imports` tab to set the order
+
+* For `Class count to use import with '\*'` and `Names count to use static import with '*'`: Set to `999` to prevent IntelliJ from contracting the import statements
+* For `Import Layout`: The order is `import static all other imports`, `import java.\*`, `import javax.*`, `import org.\*`, `import com.*`, `import all other imports`. Add a `<blank line>` between each `import`
+
+Optionally, you can follow the <<UsingCheckstyle#, UsingCheckstyle.adoc>> document to configure Intellij to check style-compliance as you write code.
+
+==== Updating documentation to match your fork
+
+After forking the repo, the documentation will still have the DukeCooks branding and refer to the `AY1920S1-CS2103T-T10-2/main` repo.
+
+If you plan to develop this fork as a separate product (i.e. instead of contributing to `AY1920S1-CS2103T-T10-2/main`), you should do the following:
+
+. Configure the <<Documentation#Docs-SiteWideDocSettings, site-wide documentation settings>> in link:{repoURL}/build.gradle[`build.gradle`], such as the `site-name`, to suit your own project.
+
+. Replace the URL in the attribute `repoURL` in link:{repoURL}/docs/DeveloperGuide.adoc[`DeveloperGuide.adoc`] and link:{repoURL}/docs/UserGuide.adoc[`UserGuide.adoc`] with the URL of your fork.
+
+==== Setting up CI
+
+Set up Travis to perform Continuous Integration (CI) for your fork. See <<UsingTravis#, UsingTravis.adoc>> to learn how to set it up.
+
+After setting up Travis, you can optionally set up coverage reporting for your team fork (see <<UsingCoveralls#, UsingCoveralls.adoc>>).
+
+[NOTE]
+Coverage reporting could be useful for a team repository that hosts the final version but it is not that useful for your personal fork.
+
+Optionally, you can set up AppVeyor as a second CI (see <<UsingAppVeyor#, UsingAppVeyor.adoc>>).
+
+[NOTE]
+Having both Travis and AppVeyor ensures your App works on both Unix-based platforms and Windows-based platforms (Travis is Unix-based while AppVeyor is Windows-based)
+
+==== Getting started with coding
+
+When you are ready to start coding, we recommend that you get some sense of the overall design by reading about <<DeveloperGuide#Design-Architecture, DukeCooks's architecture>>.
 
 == Design
 
@@ -34,7 +132,7 @@ The *_Architecture Diagram_* given above explains the high-level design of the A
 The `.puml` files used to create diagrams in this document can be found in the link:{repoURL}/docs/diagrams/[diagrams] folder.
 Refer to the <<UsingPlantUml#, Using PlantUML guide>> to learn how to create and edit diagrams.
 
-`Main` has two classes called link:{repoURL}/src/main/java/dukecooks/Main.java[`Main`] and link:{repoURL}/src/main/java/dukecooks/MainApp.java[`MainApp`]. It is responsible for,
+`Main` has two classes called link:{repoURL}/src/main/java/dukecooks/Main.java[`_Main_`] and link:{repoURL}/src/main/java/dukecooks/MainApp.java[`_MainApp_`]. It is responsible for,
 
 * At app launch: Initializes the components in the correct sequence, and connects them up with each other.
 * At shut down: Shuts down the components and invokes cleanup method where necessary.
@@ -54,7 +152,7 @@ The rest of the App consists of four components.
 Each of the four components
 
 * Defines its _API_ in an `interface` with the same name as the Component.
-* Exposes its functionality using a `{Component Name}Manager` class.
+* Exposes its functionality using a `{Component Name} Manager` class.
 
 For example, the `Logic` component (see the class diagram given below) defines it's API in the `Logic.java` interface and exposes its functionality using the `LogicManager.java` class.
 
@@ -77,7 +175,7 @@ The sections below give more details of each component.
 .Structure of the UI Component
 image::UiClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/dukecooks/ui/Ui.java[`Ui.java`]
+*API* : link:{repoURL}/src/main/java/dukecooks/ui/Ui.java[`_Ui.java_`]
 
 The UI consists of a `MainWindow` that is made up of parts e.g.`CommandBox`, `ResultDisplay`, `XYZListPanel`, `StatusBarFooter` etc. All these, including the `MainWindow`, inherit from the abstract `UiPart` class.
 
@@ -93,7 +191,7 @@ The 5 different components are:
 * Diary
 ====
 
-The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/dukecooks/ui/MainWindow.java[`MainWindow`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`MainWindow.fxml`]
+The `UI` component uses JavaFx UI framework. The layout of these UI parts are defined in matching `.fxml` files that are in the `src/main/resources/view` folder. For example, the layout of the link:{repoURL}/src/main/java/dukecooks/ui/MainWindow.java[`_MainWindow_`] is specified in link:{repoURL}/src/main/resources/view/MainWindow.fxml[`_MainWindow.fxml_`]
 
 The `UI` component,
 
@@ -109,7 +207,7 @@ Structure of the Logic Component
 image::LogicClassDiagram.png[]
 
 *API* :
-link:{repoURL}/src/main/java/dukecooks/logic/Logic.java[`Logic.java`]
+link:{repoURL}/src/main/java/dukecooks/logic/Logic.java[`_Logic.java_`]
 
 .  `Logic` uses the `DukeCooksParser` class to parse the user command.
 .  This results in a `Command` object which is executed by the `LogicManager`.
@@ -130,7 +228,7 @@ NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X
 .Structure of the Model Component
 image::ModelClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/dukecooks/model/Model.java[`Model.java`]
+*API* : link:{repoURL}/src/main/java/dukecooks/model/Model.java[`_Model.java_`]
 
 The `Model`,
 
@@ -155,18 +253,13 @@ The 5 different components are:
 * Diary
 ====
 
-[NOTE]
-As a more OOP model, we can store a `Tag` list in `Address Book`, which `Person` can reference. This would allow `Address Book` to only require one `Tag` object per unique `Tag`, instead of each `Person` needing their own `Tag` object. An example of how such a model may look like is given below. +
- +
-image:BetterModelClassDiagram.png[]
-
 [[Design-Storage]]
 === Storage component
 
 .Structure of the Storage Component
 image::StorageClassDiagram.png[]
 
-*API* : link:{repoURL}/src/main/java/dukecooks/storage/Storage.java[`Storage.java`]
+*API* : link:{repoURL}/src/main/java/dukecooks/storage/Storage.java[`_Storage.java_`]
 
 The `Storage` component,
 
@@ -185,9 +278,9 @@ This section describes some noteworthy details on how certain features are imple
 === Implementation of Commands and Parser
 All command variants (i.e `AddRecipeCommand`, `AddExerciseCommand`) extends from `AddCommand`,
 instead of the abstract `Command` class.
-This applies to other type of commands as well, such as Delete and Edit.
+This applies to other type of commands as well, such as `DeleteCommand` and `EditCommand`.
 
-The diagram below shows a simplified class diagram for Commands and Parser
+The diagram below shows a simplified class diagram for Commands and Parser.
 
 .Structure of Commands and Parser
 image::CommandImplementation.png[]
@@ -330,7 +423,7 @@ take some time.
 === RecipeBook feature
 The current implementation of RecipeBook consists of the following:
 
-* Each `Recipe` consists of a unique `name`
+* Each `Recipe` consists of a unique `Name`
 * Each `Recipe` contains an Set of `Ingredient`
 * Each `Recipe` consists of a unique `Calories`
 * Each `Recipe` consists of a unique `Carbohydrates`
@@ -509,7 +602,7 @@ The current implementation of Diary consists of the following:
 
 * Each `Diary` consists of a unique `DiaryName`
 * Each `Diary` contains an array list of `Page`
-* Each `Page` is identified by a unique `Title`
+* Each `Page` is identified by a unique `Title`, `PageType`, `Page Description` and `Page Image`
 * Each class has their respective getter methods
 
 The class diagram below gives an overview of the `Diary` class.
@@ -521,26 +614,32 @@ image::DiaryClassDiagram.png[]
 
 `Diary` class supports multiple commands. It includes:
 
-* `AddDiaryCommand` - Adds a `Diary` into `DukeCooks`
-* `DeleteDiaryCommand` - Deletes a `Diary` from `DukeCooks`
+* `AddDiaryCommand` - Adds a `Diary` into DukeCooks
+* `DeleteDiaryCommand` - Deletes a `Diary` from DukeCooks
 * `EditDiaryCommand` - Edits the specified `Diary` with a new `DiaryName`
+* `ViewDiaryCommand` - Views the specified `Diary` using the provided index
+* `FindDiaryCommand` - Finds the specified `Diary` using the provided keyword
+* `ListDiaryCommand` - Lists all available diaries to user
 * `AddPageCommand` - Adds a new `Page` to the specified `Diary`
 * `DeletePageCommand` - Deletes the `Page` in the specified `Diary`
+* `EditPageCommand` - Edits various fields of the specified `Page`
 
-All the above diary commands behave similarly. The commands will be parsed in `DukeCooksParser` and based on their
+All the above commands behave similarly. The commands will be parsed in `DukeCooksParser` first and based on their
 types (i.e Add, Delete, Edit etc), the corresponding variant parsers will be invoked (i.e `AddDiaryCommandParser`,
 `DeleteDiaryCommandParser` etc). After which, the corresponding command will be executed (i.e `AddDiaryCommand`,
 `DeleteDiaryCommand` etc).
 
-The figure below describes the execution of an `DeletePageCommand`.
+The figure below describes the execution of an `DeleteDiaryCommand`.
 
-.Sequence Diagram of DeletePageCommand
-image::DeletePageSequenceDiagram.png[]
+.Sequence Diagram of DeleteDiaryCommand
+image::DeleteDiarySequenceDiagram.png[]
 
 {nbsp} +
-After a successful execution, the specified page will be removed from the specified diary.
+After a successful execution, the specified diary will be removed.
 
-The current implementation makes use of an ArrayList to store the `Page` objects.
+==== Design Considerations
+
+The current implementation of `Diary` makes use of an ArrayList to store the `Page` objects.
 This is the simplest implementation as most novice programmers would be familiar with ArrayLists.
 However, list operations tend to take more time to run compared to other data structures such as Sets.
 
@@ -553,10 +652,33 @@ does not provide an order to `Page` objects, unlike in lists.
 *Our Choice*
 
 We chose to use ArrayLists instead as we require the `Page` objects to be ordered, so that the implementation of
-`DeletePageCommand` is simplified. An index can be provided in `DeletePageCommand` and the corresponding `Page`
+`DeletePageCommand` is simplified. An index can simply be provided in `DeletePageCommand` and the corresponding `Page`
 object can simply be removed from the ArrayList, using the specified index.
 
+==== Implementation of Images
 
+All images used in DukeCooks are copied into an internal data folder and all subsequent loading of images is done from
+within this internal folder. The following activity diagram explains how an image is created in DukeCooks:
+
+.Activity diagram of adding images
+image::ImageActivityDiagram.png[]
+
+==== Design Considerations
+
+This current implementation of images defensively copies the images into the internal data folder, instead of loading images
+from the user's local directory. While it may be slower in terms of performance, it is less prone to unexpected errors when
+loading images.
+
+*Alternatives*
+
+An alternative to copying images into an internal data folder would be to load images directly from the user's directory
+without saving it internally. This implementation performs better and is much easier to implement.
+
+*Our Choice*
+
+We decided to make defensive copies of images in our internal folder as we want to eliminate unexpected errors. By making
+defensive copies internally, we ensure that all images used can be loaded, even if the user decides to delete the original
+image in their local directory.
 
 === Logging
 
@@ -580,15 +702,168 @@ Certain properties of the application can be controlled (e.g user prefs file loc
 
 == Documentation
 
-Refer to the guide <<Documentation#, here>>.
+We use asciidoc for writing documentation.
+
+[NOTE]
+We chose asciidoc over Markdown because asciidoc provides greater flexibility in formatting.
+
+=== Editing Documentation
+
+You may refer to <<UsingGradle#rendering-asciidoc-files, UsingGradle.adoc>> and learn how to render `.adoc` files locally to preview the end result of your edits.
+Alternatively, you can download the AsciiDoc plugin for IntelliJ, which allows you to preview the changes you have made to your `.adoc` files in real-time.
+
+=== Editing Diagrams
+
+You may refer to <<UsingPlantUml#, UsingPlantUml.adoc>> and learn how to create and update UML diagrams in the Developer Guide.
+
+=== Publishing Documentation
+
+You may refer to <<UsingTravis#deploying-github-pages, UsingTravis.adoc>> and learn how to deploy GitHub Pages using Travis.
+
+=== Converting Documentation to PDF format
+
+We use https://www.google.com/chrome/browser/desktop/[Google Chrome] for converting documentation to PDF format, as Chrome's PDF engine preserves hyperlinks used in webpages.
+
+Here are the steps to convert the project documentation files to PDF format.
+
+.  Follow the instructions in <<UsingGradle#rendering-asciidoc-files, UsingGradle.adoc>> to convert the AsciiDoc files in the `docs/` directory to HTML format.
+.  Go to your generated HTML files in the `build/docs` folder, right click on them and select `Open with` -> `Google Chrome`.
+.  Within Chrome, click on the `Print` option in Chrome's menu.
+.  Set the destination to `Save as PDF`, then click `Save` to save a copy of the file in PDF format. For best results, use the settings indicated in the screenshot below.
+
+.Saving documentation as PDF files in Chrome
+image::chrome_save_as_pdf.png[width="300"]
+
+[[Docs-SiteWideDocSettings]]
+=== Site-wide Documentation Settings
+
+The link:{repoURL}/build.gradle[`_build.gradle_`] file specifies some project-specific https://asciidoctor.org/docs/user-manual/#attributes[asciidoc attributes] which affects how all documentation files within this project are rendered.
+
+[TIP]
+Attributes left unset in the `build.gradle` file will use their *default value*, if any.
+
+[cols="1,2a,1", options="header"]
+.List of site-wide attributes
+|===
+|Attribute name |Description |Default value
+
+|`site-name`
+|The name of the website.
+If set, the name will be displayed near the top of the page.
+|_not set_
+
+|`site-githuburl`
+|URL to the site's repository on https://github.com[GitHub].
+Setting this will add a "View on GitHub" link in the navigation bar.
+|_not set_
+|===
+
+[[Docs-PerFileDocSettings]]
+=== Per-file Documentation Settings
+
+Each `.adoc` file may also specify some file-specific https://asciidoctor.org/docs/user-manual/#attributes[asciidoc attributes] which affects how the file is rendered.
+
+Asciidoctor's https://asciidoctor.org/docs/user-manual/#builtin-attributes[built-in attributes] may be specified and used as well.
+
+[TIP]
+Attributes left unset in `.adoc` files will use their *default value*, if any.
+
+[cols="1,2a,1", options="header"]
+.List of per-file attributes, excluding Asciidoctor's built-in attributes
+|===
+|Attribute exerciseName |Description |Default value
+
+|`site-section`
+|Site section that the document belongs to.
+This will cause the associated item in the navigation bar to be highlighted.
+One of: `UserGuide`, `DeveloperGuide`, ``LearningOutcomes``{asterisk}, `AboutUs`, `ContactUs`
+
+_{asterisk} Official SE-EDU projects only_
+|_not set_
+
+|`no-site-header`
+|Set this attribute to remove the site navigation bar.
+|_not set_
+
+|===
+
+=== Site Template
+
+The files in link:{repoURL}/docs/stylesheets[`docs/stylesheets`] are the https://developer.mozilla.org/en-US/docs/Web/CSS[CSS stylesheets] of the site.
+You can modify them to change some properties of the site's design.
+
+The files in link:{repoURL}/docs/templates[`docs/templates`] controls the rendering of `.adoc` files into HTML5.
+These template files are written in a mixture of https://www.ruby-lang.org[Ruby] and http://slim-lang.com[Slim].
+
+[WARNING]
+====
+Modifying the template files in link:{repoURL}/docs/templates[`docs/templates`] requires some knowledge and experience with Ruby and Asciidoctor's API.
+You should only modify them if you need greater control over the site's layout than what stylesheets can provide.
+====
 
 == Testing
 
-Refer to the guide <<Testing#, here>>.
+=== Running Tests
+
+There are two ways to run tests.
+
+*Method 1: Using IntelliJ JUnit test runner*
+
+* To run all tests, right-click on the `src/test/java` folder and choose `Run 'All Tests'`
+* To run a subset of tests, you can right-click on a test package, test class, or a test and choose `Run 'ABC'`
+
+*Method 2: Using Gradle*
+
+* Open a console and run the command `gradlew clean test` (Mac/Linux: `./gradlew clean test`)
+
+[NOTE]
+You may refer to <<UsingGradle#, UsingGradle.adoc>> for more information on how to run tests using Gradle.
+
+=== Types of tests
+
+We have three types of tests:
+
+.  _Unit tests_ targeting the lowest level methods/classes. +
+e.g. `dukecooks.StringUtilTest`
+.  _Integration tests_ that are checking the integration of multiple code units (those code units are assumed to be working). +
+e.g. `dukecooks.storage.StorageManagerTest`
+.  Hybrids of unit and integration tests. These test are checking multiple code units as well as how the are connected together. +
+e.g. `dukecooks.LogicManagerTest`
 
 == Dev Ops
 
-Refer to the guide <<DevOps#, here>>.
+=== Build Automation
+
+You may refer to <<UsingGradle#, UsingGradle.adoc>> and learn how to use Gradle for build automation.
+
+=== Continuous Integration
+
+We use https://travis-ci.org/[Travis CI] and https://www.appveyor.com/[AppVeyor] to perform _Continuous Integration_ on our projects. Refer to <<UsingTravis#, UsingTravis.adoc>> and <<UsingAppVeyor#, UsingAppVeyor.adoc>> for more details.
+
+=== Coverage Reporting
+
+We use https://coveralls.io/[Coveralls] to track the code coverage of our projects. Refer to <<UsingCoveralls#, UsingCoveralls.adoc>> for more details.
+
+=== Documentation Previews
+
+When a pull request make changes to asciidoc files, you can use https://www.netlify.com/[Netlify] to see a preview of how the HTML version of those asciidoc files will look like when the pull request is merged. Refer to <<UsingNetlify#, UsingNetlify.adoc>> for more details.
+
+=== Making a Release
+
+Here are the steps to create a new release.
+
+.  Update the version number in link:{repoURL}/src/main/java/seedu/address/MainApp.java[`_MainApp.java_`].
+.  Generate a JAR file <<UsingGradle#creating-the-jar-file, using Gradle>>.
+.  Tag the repo with the version number. e.g. `v0.1`
+.  https://help.github.com/articles/creating-releases/[Create a new release using GitHub] and upload the JAR file you created.
+
+=== Managing Dependencies
+
+A project often depends on third-party libraries. For example, DukeCooks depends on the https://github.com/FasterXML/jackson[Jackson library] for JSON parsing. Managing these _dependencies_ can be automated using Gradle. For example, Gradle can download the dependencies automatically, which is better than these alternatives:
+
+. Include third-party libraries in the repository (This bloats the repository size)
+. Require developers to download third-party libraries manually (Requires extra work from developers)
+
 
 [appendix]
 == Product Scope
@@ -602,7 +877,10 @@ Refer to the guide <<DevOps#, here>>.
 * prefers typing over mouse input
 * is reasonably comfortable using CLI apps
 
-*Value proposition*: monitors all aspects of health in one application
+*Value proposition*: +
+DukeCooks monitors all aspects of the user's lifestyle in one single application. This provides the user with the added
+benefit of having to only manage a single application, instead of managing different applications. This is particularly
+useful for busy individuals who do not have time to manage different applications.
 
 [appendix]
 == User Stories
@@ -634,7 +912,7 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 (For all use cases below, the *System* is `DukeCooks` and the *Actor* is the `user`, unless specified otherwise)
 
 [discrete]
-=== Use case: Add recipe
+=== Use case: UC01 - Adding recipes
 
 *MSS*
 
@@ -660,7 +938,7 @@ Use case ends.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Suggest Food
+=== Use case: UC02 - Suggesting Food
 
 *MSS*
 
@@ -681,7 +959,7 @@ Use case ends.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Add Calorie Intake
+=== Use case: UC03 - Adding Calorie Intake
 
 *MSS*
 
@@ -710,7 +988,7 @@ Use case ends.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Create Workout
+=== Use case: UC04 - Creating Workouts
 
 *MSS*
 
@@ -739,12 +1017,12 @@ Use case resumes at step 2.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Create a new diary
+=== Use case: UC05 Adding a new diary
 
 *MSS*
 
-1.  User requests to create a new diary
-2.  A new diary is created with the specified name
+1.  User requests to add a new diary
+2.  A new diary is added with the specified name
 
 +
 Use case ends.
@@ -762,11 +1040,11 @@ Use case ends.
 [appendix]
 == Non Functional Requirements
 
-.  Should work on any <<mainstream-os,mainstream OS>> as long as it has Java `11` or above installed.
-.  Should be able to hold up to 1000 recipes without a significant reduction in performance for typical usage.
+.  DukeCooks should work on any <<mainstream-os,mainstream OS>> as long as it has Java `11` or above installed.
+.  DukeCooks should be able to hold up to 1000 recipes without a significant reduction in performance for typical usage.
 .  A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
-
-_{More to be added}_
+.  DukeCooks should be able to run with or without internet connection.
+.  DukeCooks should not require the user to do any installation.
 
 [appendix]
 == Glossary
@@ -779,23 +1057,6 @@ A list of <<exercise>> planned to be done in one session.
 
 [[exercise]] Exercise::
 An activity that works a specific or multiple muscles, usually a repetition of an action.
-
-[appendix]
-== Product Survey
-
-*Product Name*
-
-Author: ...
-
-Pros:
-
-* ...
-* ...
-
-Cons:
-
-* ...
-* ...
 
 [appendix]
 == Instructions for Manual Testing
@@ -811,15 +1072,7 @@ These instructions only provide a starting point for testers to work on; testers
 
 .. Download the jar file and copy into an empty folder
 .. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may not be optimum.
-
-. Saving window preferences
-
-.. Resize the window to an optimum size. Move the window to a different location. Close the window.
-.. Re-launch the app by double-clicking the jar file. +
-   Expected: The most recent window size and location is retained.
-
-_{ more test cases ... }_
+   Expected: Shows the GUI with a set of sample data. The window size will be automatically set to full-screen.
 
 === Deleting a person
 
@@ -830,15 +1083,59 @@ _{ more test cases ... }_
    Expected: First contact is deleted from the list. Details of the deleted contact shown in the status message. Timestamp in the status bar is updated.
 .. Test case: `delete 0` +
    Expected: No person is deleted. Error details shown in the status message. Status bar remains the same.
-.. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
+.. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) +
    Expected: Similar to previous.
 
-_{ more test cases ... }_
+=== Adding a diary
+
+. Adding a diary while all diaries are listed
+
+.. Prerequisites: List all diaries using the `list` command. Multiple diaries are in the list.
+.. Test case: `add diary n/ Yummy Food` +
+   Expected: A new diary named "Yummy Food" is added to the list. Details of the added diary is shown in the result display.
+.. Test case: `add diary n/ Yummy Food` (A repeat of the previous test case) +
+   Expected: No diary is added. Error message is shown in the result display. Status bar remains the same.
+.. Other incorrect delete commands to try: `add diary`, `add diary n/ <name>` (where <name> already exists in the diary list) +
+Expected: Similar error messages to previous.
+
+=== Deleting a diary
+
+. Deleting a diary while all diaries are listed
+
+.. Prerequisites: List all diaries using the `list` command. Multiple diaries are in the list.
+.. Test case: `delete diary 1` +
+   Expected: First diary is deleted from the list. Details of the deleted diary is shown in the result display.
+.. Test case: `delete diary 0` +
+   Expected: No diary is deleted. Error message is shown in the result display. Status bar remains the same.
+.. Other incorrect delete commands to try: `delete diary`, `delete diary x` (where x is larger than the list size) +
+   Expected: Similar error messages to previous.
+
+=== Deleting a page
+
+. Deleting a page from a specified diary
+
+.. Prerequisites: List all diaries using the `list` command. "Yummy Food" exists in the diary list and has at least one page.
+.. Test case: `delete page 1 n/ Yummy Food` +
+   Expected: Page 1 of the diary named "Yummy Food" will be deleted. Details of the deleted page is shown in the result display.
+.. Test case: `delete page 0 n/ Yummy Food` +
+   Expected: No page is deleted. Error message is shown in the result display. Status bar remains the same.
+.. Other incorrect delete commands to try: `delete page`, `delete page 1 n/ <name>` (where <name> does not exists in the diary list) +
+Expected: Similar error messages to previous.
+
 
 === Saving data
 
 . Dealing with missing/corrupted data files
 
-.. _{explain how to simulate a missing/corrupted file and the expected behavior}_
+.. Identify the file that is causing the error. +
+It should be one of the following:
+- `.\data\dashboard.json`
+- `.\data\diary.json`
+- `.\data\exercises.json`
+- `.\data\healthrecords.json`
+- `.\data\mealplans.json`
+- `.\data\recipes.json`
+- `.\data\userprofile.json`
+- `.\data\workouts.json` +
 
-_{ more test cases ... }_
+After identifying the file that causes the error, delete that particular data file.
