--- a/docs/UsingNetlify.adoc
+++ b/docs/UsingNetlify.adoc
@@ -6,12 +6,6 @@ ifdef::env-github[]
 :note-caption: :information_source:
 endif::[]
 
-[NOTE]
-====
-This document was originally written for _AddressBook Level 4_ and hence its screenshots refer to `addressbook-level4`.
-For use with _AddressBook Level 3_, wherever `addressbook-level4` is used in the screenshots, you should use *`addressbook-level3`*.
-====
-
 https://www.netlify.com/[Netlify] is an automated hosting platform for deploying static websites. With the aid of build tools such as Gradle, Netlify provides a smoother experience for previewing documentation. This can be done by using Netlify's https://www.netlify.com/blog/2016/07/20/introducing-deploy-previews-in-netlify/[Deploy Previews] feature, which shows a preview of the updated documentation whenever a pull request is made.
 
 == Setting up Netlify
@@ -41,19 +35,19 @@ The build command is the command that builds the documentation into HTML format.
 The publish directory is the directory in which the built HTML documentation resides.
 +
 . Once Netlify has completed building your project, you can now:
-* View your main branch's deployed documentation on the site exerciseName given by Netlify (customizable as shown <<Changing the site exerciseName of your project, below>>).
+* View your main branch's deployed documentation on the site name given by Netlify (customizable as shown <<Changing the site name of your project, below>>).
 +
-image:netlify/temp_site_name.png[Temporary site exerciseName, width = 630]
+image:netlify/temp_site_name.png[Temporary site name, width = 630]
 +
 * Preview the updated documentation whenever a pull request is made by clicking the `Details` hyperlink next to the Netlify test status.
 +
 image:netlify/netlify_details.png[Netlify details link, width = 630]
 
-== Changing the site exerciseName of your project
-If you don't like the site exerciseName given by Netlify, you can change it as follows:
+== Changing the site name of your project
+If you don't like the site name given by Netlify, you can change it as follows:
 
 . Click on `Settings`.
 +
-. Then click `Change site exerciseName` and fill in your desired site exerciseName.
+. Then click `Change site name` and fill in your desired site name.
 +
-image:netlify/change_site_name.png[Change site exerciseName, width = 630]
+image:netlify/change_site_name.png[Change site name, width = 630]
