--- a/docs/UsingTravis.adoc
+++ b/docs/UsingTravis.adoc
@@ -6,12 +6,6 @@ ifdef::env-github[]
 :note-caption: :information_source:
 endif::[]
 
-[NOTE]
-====
-This document was originally written for _AddressBook Level 4_ and hence its screenshots refer to `addressbook-level4`.
-For use with _AddressBook Level 3_, wherever `addressbook-level4` is used in the screenshots, you should use *`addressbook-level3`*.
-====
-
 https://travis-ci.org/[Travis CI] is a _Continuous Integration_ platform for GitHub projects.
 
 Travis CI can run the projects' tests automatically whenever new code is pushed to the repo. This ensures that existing functionality and features have not been broken by the changes.
@@ -110,7 +104,7 @@ Similarly, make sure you *do not print `$GITHUB_TOKEN` to the logs* in Travis sc
 .  Trigger Travis to regenerate documentation. To do so, you need to push a new commit to the master branch of the fork. +
    Suggested change: Remove the codacy badge from `README`.
 .  Wait for Travis CI to finish running the build on your new commit.
-.  Go to the URL `\https://<your-username-or-organization-exerciseName>.github.io/addressbook-level3/`. You should see your `README` file displayed.
+.  Go to the URL `\https://<your-username-or-organization-name>.github.io/project-name/`. You should see your `README` file displayed.
 
 == Repository-wide checks
 
